delete construct tree notebook

--- a/notebooks/gowalla/gowalla.ipynb
+++ b/notebooks/gowalla/gowalla.ipynb
@@ -202,6 +202,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#data = DIN_Model.item_embedding.embed.weight.data[:item_num,:].cpu()\n",
     "data = None\n",
     "train_model_list = []\n",
     "for i in range(tree_num):\n",
