--- a/notebooks/gowalla/gowalla_DIN.ipynb
+++ b/notebooks/gowalla/gowalla_DIN.ipynb
@@ -170,10 +170,10 @@
     "    for re,gt in zip(result_list,gt_list):\n",
     "        setgt=set(gt)\n",
     "        indicator=np.asfarray([1 if r in setgt else 0 for r in re])\n",
-    "        sorted_indicator=indicator[indicator.argsort(-1)[::-1]]\n",
+    "        sorted_indicator = np.ones(min(len(setgt), len(re)))\n",
     "        if 1 in indicator:\n",
     "            t+=np.sum(indicator / np.log2(1.0*np.arange(2,len(indicator)+ 2)))/\\\n",
-    "               np.sum(sorted_indicator/np.log2(1.0*np.arange(2,len(indicator)+ 2)))\n",
+    "               np.sum(sorted_indicator/np.log2(1.0*np.arange(2,len(sorted_indicator)+ 2)))\n",
     "    return t/len(gt_list)\n",
     "\n",
     "def MAP(result_list,gt_list,topk):\n",
